# medbot

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  store_index.py  streamlit_app.py  template.sh  test.py
src/: helper.py  prompt.py
static/: style.css
templates/: chat.html
